<resources>
    <string name="app_name">FixIt App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="phone_number">Phone Number</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="home">Home</string>
    <string name="feeds">Feeds</string>
    <string name="profile">Profile</string>
    <string name="messages">Messages</string>
    <string name="settings">Settings</string>
    <string name="personal_information">Personal Information</string>
    <string name="specialisation">Specialisation</string>
    <string name="address_information">Address Information</string>
    <string name="address">Address</string>
    <string name="region">Region</string>
    <string name="country">Country</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="category">Category</string>
    <string name="description">Description</string>
    <string name="budget">Budget</string>
    <string name="book_work">Book Work</string>
    <string name="contact">Contact</string>
    <string name="name_placeholder">Victor Kabata</string>
    <string name="comment">Comment</string>
    <string name="cancel">Cancel</string>
    <string name="no_application">No Applications Yet</string>
    <string name="location">Location</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="rejected">Rejected</string>
    <string name="started">Started</string>
    <string name="finished">Finished</string>
    <string name="complete">Complete</string>
    <string name="completed">Completed</string>
    <string name="select_photo">Select Photo</string>
    <string name="upload">Upload</string>
    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="complete_work_message">Mark this work as complete?</string>
    <string name="rating_dialog_title">How would you rate </string>
    <string name="no_work">Work applications closed</string>

    <string name="pay_with_cash">Pay with Cash</string>
    <string name="pay_with_mpesa">Pay with Mpesa</string>
    <string name="home_and_feeds">Home and Feeds</string>

    <string name="communication">Communication</string>
    <string name="others">Others</string>
    <string name="transactions">Transactions</string>
    <string name="amount">Amount</string>
    <string name="review">Review</string>
    <string name="from">From:</string>
    <string name="no_transactions">No Transactions</string>

    <string-array name="specialisations">
        <item>Select Specialisation</item>
        <item>Computer Repair</item>
        <item>Automotive Repair</item>
        <item>Furniture Repair</item>
        <item>Plumbing</item>
        <item>Electrical Repair</item>
        <item>Phone Repair</item>
    </string-array>

    <string-array name="categories">
        <item>Select Category</item>
        <item>Computer Repair</item>
        <item>Automotive Repair</item>
        <item>Furniture Repair</item>
        <item>Plumbing</item>
        <item>Electrical Repair</item>
        <item>Phone Repair</item>
    </string-array>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDbEEHz3vTzgRd9aGWypOCqDWHeMmHF1uc</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="select_theme">Select Theme</string>
    <string name="theme">Theme</string>
    <string name="language">Language</string>
    <string name="select_language">Select Language</string>
    <string name="def">Default</string>
    <string name="post_description_placeholder">This is just a test post that to test post detail fragment and will be deleted in final production database refresh feature</string>
    <string name="logout">Logout</string>
    <string name="category_placeholder">Electrical Repair</string>
    <string name="start_work">Start Work</string>
</resources>

