<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item

            android:title="@string/home_and_feeds">
            <menu>
                <item
                    android:id="@+id/home_fragment"
                    android:icon="@drawable/ic_home"
                    android:title="@string/home" />

                <item
                    android:id="@+id/feeds_fragment"
                    android:icon="@drawable/ic_feeds"
                    android:title="@string/feeds" />

                <item
                    android:id="@+id/transactions_fragment"
                    android:icon="@drawable/ic_transactions"
                    android:title="@string/transactions" />
            </menu>
        </item>

        <item android:title="@string/profile">
            <menu>
                <item
                    android:id="@+id/profile_fragment"
                    android:icon="@drawable/ic_profile"
                    android:title="@string/profile" />
            </menu>
        </item>

        <item android:title="@string/communication">
            <menu>
                <item
                    android:id="@+id/messages_fragment"
                    android:icon="@drawable/ic_messages"
                    android:title="@string/messages" />
            </menu>
        </item>

        <item android:title="@string/others">
            <menu>
                <item
                    android:id="@+id/settings_fragment"
                    android:icon="@drawable/ic_settings"
                    android:title="@string/settings" />
            </menu>
        </item>

    </group>
</menu>