<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.post_detail.PostDetailFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:fitsSystemWindows="true"
                android:theme="@style/ThemeOverlay.AppCompat"
                app:contentScrim="@color/colorPrimary"
                app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Title"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:statusBarScrim="@color/colorPrimary">

                <ImageView
                    android:id="@+id/imageView_post_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="fitCenter"
                    app:layout_collapseMode="pin" />

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/post_detail_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:elevation="5dp"
                    android:fitsSystemWindows="true"
                    android:popupTheme="@style/Theme.AppCompat.Light"
                    app:layout_collapseMode="pin" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="true"
            android:paddingTop="8dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="16dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/user_imageView"
                        android:layout_width="40dp"
                        android:layout_height="40dp" />

                    <LinearLayout
                        android:id="@+id/wrapper"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/user_imageView"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/user_username"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="@string/username"
                            android:textColor="@color/secondaryColor"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/user_email"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="@string/email"
                            android:textColor="@color/secondaryColor"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@+id/wrapper"
                        android:layout_marginVertical="4dp"
                        android:background="@color/primaryColor" />

                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/category"
                    android:textColor="@color/secondaryColor"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView_post_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="@font/roboto_bold"
                    android:maxLines="1"
                    android:textColor="@color/primaryColor"
                    android:textSize="20sp"
                    tools:text="Electrical Repair" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/description"
                    android:textColor="@color/secondaryColor"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView_post_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="@font/roboto_regular"
                    android:textColor="@color/primaryColor"
                    android:textSize="16sp"
                    tools:text="@string/post_description_placeholder" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/budget"
                    android:textColor="@color/secondaryColor"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView_post_budget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="@font/roboto_regular"
                    android:maxLines="1"
                    android:textColor="@color/primaryColor"
                    android:textSize="20sp"
                    tools:text="420" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/location"
                    android:textColor="@color/secondaryColor"
                    android:textSize="16sp" />


                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="230dp"
                    android:elevation="8dp"
                    android:layout_marginTop="3dp"
                    app:cardCornerRadius="8dp">

                    <!--TODO: Remove public api key-->
                    <fragment
                        android:id="@+id/mapView"
                        android:name="com.google.android.gms.maps.SupportMapFragment"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:apiKey="@string/google_maps_key" />

                </com.google.android.material.card.MaterialCardView>

                <Button
                    android:id="@+id/button_book"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/roboto_bold"
                    android:padding="10dp"
                    android:text="@string/book_work"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/button_contact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/roboto_bold"
                    android:padding="10dp"
                    android:text="@string/contact"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <ProgressBar
            android:id="@+id/progressBar_postDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTintMode="src_atop"
            android:elevation="11dp"
            android:indeterminate="true"
            android:indeterminateTint="@color/colorPrimary"
            android:visibility="gone" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>