<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="5dp"
        android:background="@android:color/transparent"
        app:cardCornerRadius="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageView_post_booking_profile"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView_post_booking_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@color/primaryColor"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/imageView_post_booking_profile"
                app:layout_constraintTop_toTopOf="@+id/imageView_post_booking_profile"
                tool:text="@string/name_placeholder" />

            <TextView
                android:id="@+id/textView_post_booking_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primaryColor"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/textView_post_booking_username"
                app:layout_constraintTop_toBottomOf="@+id/textView_post_booking_username"
                tool:text="@string/email" />

            <TextView
                android:id="@+id/textView_post_booking_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_location"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/secondaryColor"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView_post_booking_profile"
                app:layout_constraintStart_toStartOf="@+id/textView_post_booking_email"
                app:layout_constraintTop_toBottomOf="@+id/textView_post_booking_email"
                tool:text="@string/location" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:background="@color/primaryColor"
                app:layout_constraintTop_toBottomOf="@+id/imageView_post_booking_profile" />

            <TextView
                android:id="@+id/_textView_post_booking_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:textColor="@color/primaryColor"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view"
                tool:text="Worker's comments" />

            <TextView
                android:id="@+id/textView_post_bookings_bid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/green"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/_textView_post_booking_comment"
                tool:text="Ksh. 500" />

            <LinearLayout
                android:id="@+id/linearLayout_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_post_bookings_bid">

                <Button
                    android:id="@+id/button_reject"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/red"
                    android:padding="10dp"
                    android:text="@string/reject"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button_accept"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/green"
                    android:padding="10dp"
                    android:text="@string/accept"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>


            <Button
                android:id="@+id/button_rejection_confirmed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/red"
                android:padding="10dp"
                android:visibility="gone"
                android:text="@string/rejected"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/textView_post_bookings_bid" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</layout>