<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.work.WorkFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearlayout_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/work_imageView"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:layout_gravity="center"
                    android:background="@color/shimmer_color"
                    android:elevation="10dp" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cardView_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-75dp"
                    android:layout_marginBottom="5dp"
                    app:cardCornerRadius="15dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="65dp"
                        android:orientation="vertical"
                        android:padding="15dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:fontFamily="@font/roboto_medium"
                            android:text="@string/username"
                            android:textColor="@color/secondaryColor"
                            android:textSize="12sp" />

                        <View
                            android:id="@+id/work_username"
                            android:layout_width="200dp"
                            android:layout_height="25dp"
                            android:layout_gravity="center_horizontal"
                            android:background="@color/shimmer_color" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="18dp"
                            android:fontFamily="@font/roboto_medium"
                            android:text="@string/email"
                            android:textColor="@color/secondaryColor"
                            android:textSize="12sp" />

                        <View
                            android:id="@+id/work_emailAddress"
                            android:layout_width="180dp"
                            android:layout_height="25dp"
                            android:layout_gravity="center_horizontal"
                            android:background="@color/shimmer_color" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="18dp"
                            android:fontFamily="@font/roboto_medium"
                            android:text="@string/phone_number"
                            android:textColor="@color/secondaryColor"
                            android:textSize="12sp" />

                        <View
                            android:id="@+id/work_phoneNumber"
                            android:layout_width="180dp"
                            android:layout_height="25dp"
                            android:layout_gravity="center_horizontal"
                            android:background="@color/shimmer_color" />

                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/started"
                    android:textColor="@color/secondaryColor"
                    android:textSize="12sp" />

                <View
                    android:id="@+id/work_started"
                    android:layout_width="150dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/shimmer_color" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="18dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/finished"
                    android:textColor="@color/secondaryColor"
                    android:textSize="12sp" />

                <View
                    android:id="@+id/work_finished"
                    android:layout_width="150dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/shimmer_color" />

            </LinearLayout>

            <Button
                android:id="@+id/button_complete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="25dp"
                android:layout_marginVertical="24dp"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/complete"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>


    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar_Profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:backgroundTintMode="src_atop"
        android:elevation="11dp"
        android:indeterminate="true"
        android:indeterminateTint="@color/colorPrimary"
        android:visibility="gone" />

</RelativeLayout>